--- a/getting-started/introduction.html
+++ b/getting-started/introduction.html
@@ -183,7 +183,7 @@ In a multicall proposal, the DAO calls its MI and passes it some instructions, t
 If the DAO address is <code>marmaj.sputnik-dao.near</code> then it will have a MI deployed at <code>marmaj.v1.multicall.near</code></p>
 </div>
 </div>
-<p>DAOs need to create a multicall instance (MI) before using it for the first time. You can think of this as an installation step that only happens once. Instructions for this can be found on the <a href="./onboarding.html">onboarding guide</a>.</p>
+<p>DAOs need to create a multicall instance (MI) before using it for the first time. You can think of this as an installation step that only happens once. Instructions for this can be found on the <a href="getting-started/onboarding.html">onboarding guide</a>.</p>
 
                     </main>
 
